# DiraQ

./: .gitignore  CLAUDE.md  LICENSE  README.md  README.ru.md  architecture.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
.specify/memory/: constitution.md
specs/001-dirq-cli/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-dirq-cli/checklists/: requirements.md
specs/001-dirq-cli/contracts/: cli-interface.md
src/dirq/: __main__.py  cli.py  config.py  navigator.py  platform.py  shell.py
tests/integration/: test_init_flow.py  test_navigate_flow.py  test_save_flow.py
tests/unit/: test_cli.py  test_config.py  test_navigator.py  test_platform.py  test_shell.py
